# nrf52-zb-oaiq

./: CMakeLists.txt  Kconfig  Kconfig.hsm  README.rst  openocd.cfg  sample.yaml
.cache/clangd/index/: flash.c.CDE0311E7D6E1484.idx  flash.h.8126D3E95D983C6C.idx  main.c.CFA059B523F25778.idx  scd4x.c.35C4CC86CEF006D0.idx  scd4x.h.C51C55BB2D2B737B.idx  sensor.c.3F6649D0B34624C4.idx  sensor.h.802CAD9F8FC6DA57.idx  weather_station.c.9CB49FC8B7CD4A50.idx  weather_station.h.C321C6E521E5AA12.idx
configuration/xiao_ble/: app.overlay  pm_static.yml  prj.conf  prj_release.conf
modules/bme688/: CMakeLists.txt  bme688.c
modules/epaper/: epaper.c  epaper.h  epaper_comm.c
modules/xiao_sense_nrf52840_battery_lib/src/battery/: battery.c  battery.h
src/: main.c  reporting.c  reporting.h  sensor.c  sensor.cpp  sensor.h  weather_station.c
src/modules/bme688/BME68x-Sensor-API/: bme68x.c
src/modules/epaper/: epaper.c  epaper.h
src/modules/scd4x/zephyr/: scd4x.c
src/pm/: flash.c
src/subsys/app_flash/: flash_settings_storage.cpp
src/subsys/bme688_server/: CMakeLists.txt  bme688_server.cpp
src/subsys/bme688_server/bsec2/: bsec2.cpp
src/subsys/bme688_server/bsec2/Bosch-BSEC2-Library/src/config/Default_H2S_NonH2S/: Default_H2S_NonH2S.c
src/zigbee/: aiq.h  clusters.c  clusters.h  co2.h
subsys/bme688_server/: bme688_server.cpp  bme688_server.h
subsys/bme688_server/bsec2/: CMakeLists.txt  bsec2.cpp
subsys/bme688_server/bsec2/Bosch-BSEC2-Library/src/config/Default_H2S_NonH2S/: Default_H2S_NonH2S.h
